--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 *{
     padding-top: 10px;
 }
@@ -94,4 +97,21 @@
 .aboutemetext h1{
     font-size: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.aboutbox img{
+    border-radius: 30px;
+    height: 300px;
+    width: 250px;
+}
+#about{
+    margin-top: 80px;
+}
+.abbox{
+    text-align: center;
+    border-style: solid;
+    border-color: #8A8888;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px;
+    width: 300px;
 }
