--- a/style.css
+++ b/style.css
@@ -127,6 +127,30 @@ html{
 .aboutbox .abbox:nth-child(3){
     margin-top: -40px;
     border: none;
-    width: auto; /* Change 'max-content' to 'auto' */
-    overflow: hidden; /* Or use 'overflow: auto;' if you want to add scrollbars */
+    width: auto;
+    overflow: hidden;
+}
+.expcontainer{
+    display: flex;
+}
+.expbox{
+    border-style: solid;
+    margin: 10px;
+    padding: 10px;
+    width: min-content;
+    border-radius: 10px;
+}
+.frnt{
+    margin-top: -60px;
+    display: flex; 
+    justify-content: space-between;   
+}
+.frnt .t1{
+    margin:60px;
+}
+.expbox{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+.expbox h2{
+    text-align: center;
 }
