--- a/style.css
+++ b/style.css
@@ -282,3 +282,14 @@ html{
     text-decoration: none;
     color: white;
 }
+.contacttext{
+    text-align: center;
+}
+.contacttext h5{
+    color: #8A8888;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.contacttext h1{
+    font-size: 50px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
