--- a/style.css
+++ b/style.css
@@ -293,3 +293,84 @@ html{
     font-size: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.contactcont{
+    display: flex;
+    justify-content: space-around;
+}
+.contactbox{
+    margin: 20px;
+}
+.contact-card {
+    border-color: #8A8888;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 10px;
+    text-align: center;
+  }
+  
+  .contact-card h2 {
+    margin-bottom: 10px;
+  }
+  
+  .name-field,
+  .email-field,
+  .message-field {
+    width: 250px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-bottom: 5px;
+    background-color: #e0e0e0;
+    outline: 1px solid transparent;
+    transition: outline 0.2s ease-in-out;
+  }
+  
+  .name-field:focus,
+  .email-field:focus,
+  .message-field:focus {
+    outline: 1px solid #33ccff;
+  }
+  
+  .message-field {
+    resize: none;
+  }
+  
+  .send-button {
+    background-color: #33ccff;
+    color: #fff;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+  .send-button:hover {
+    background-color: #22aaff;
+  }
+  .contactbox h2 {
+    text-align: center;  /* Center the heading text */
+  }
+  
+  .contact-info {
+    display: flex;
+    width: max-content;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;  /* Center the content horizontally */
+    padding: 20px;
+    border-radius: 5px;  /* Add rounded corners */
+  }
+  
+  .contact-info h4 {
+    margin-bottom: 10px;  /* Add space between contact details */
+  }
+  
+  .contact-info i {
+    margin-right: 10px;  /* Add space between icon and text */
+    font-size: 1.2em;  /* Adjust icon size */
+  }
