--- a/style.css
+++ b/style.css
@@ -373,4 +373,5 @@ html{
   .contact-info i {
     margin-right: 10px;  /* Add space between icon and text */
     font-size: 1.2em;  /* Adjust icon size */
+    color: black;
   }
