--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Madimi+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pattaya&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Riot&display=swap');
 html{
     scroll-behavior: smooth;
 }
@@ -54,7 +55,7 @@ html{
     padding: 10px;
 }
 .links .nav_link a:hover{
-    color: #42A5F5;
+    color: #0085FF;
     transition: 0.5s ease-in-out 0s;
 }
 .homepage{
@@ -350,9 +351,12 @@ html{
   }
   
   .send-button:hover {
-    background-color: #22aaff;
+    background-color: #0085FF;
   }
   .contactbox h2 {
+    font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
     text-align: center;  /* Center the heading text */
   }
   
@@ -368,6 +372,9 @@ html{
   
   .contact-info h4 {
     margin-bottom: 10px;  /* Add space between contact details */
+    font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
   }
   
   .contact-info i {
@@ -375,3 +382,10 @@ html{
     font-size: 1.2em;  /* Adjust icon size */
     color: black;
   }
+.navbar .icon img{
+  height: 30px;
+  width: 130px;
+}
+#contact{
+  margin-top: 30px;
+}
